# fiagent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agent.py  brand.py  hooks.json  paths.py  pyproject.toml  requirements.txt
analysis/: factor_core.py
atrading/: __init__.py  __main__.py  cli.py
core/: __init__.py  cli.py  commands.py  context.py  context_budget.py  loop.py  message_sanitize.py  stream.py  turn_control.py
data/: industry_chain.json.example
docs/: BACKTEST_ROADMAP.md  CHANGELOG-2026-07.md  FINANCIAL_MODULES_PLAN.md  OPTIMIZATION_INVESTIGATION.md  PHASE1_ASHARE.md  PROMPT_BASE_OPTIMIZED_DRAFT.md  README.md  ROADMAP_2026.md  architecture.md  references.md
hooks/: __init__.py  log.py  registry.py
market/: __init__.py  a_share_code.py  akshare_data.py  backtest_attr.py  backtest_engine.py  backtest_p2.py  barra_lite.py  black_litterman.py  eastmoney.py  eastmoney_indicator_fields.py  envelope.py  esg_data.py  factor_zoo.py  http.py  industry_chain.py  loaders.py  market_data.py  research_store.py  risk_metrics.py  seat_classify.py  sentiment_data.py  trade_calendar.py
mcps/: registry.py
prompts/: base.md
session/: __init__.py  store.py
signals/: custom_strategy.py
skills/: registry.py
tests/: test_backtest_engine.py  test_calc_dcf.py  test_clock.py  test_esg_tools.py  test_financial_calc.py  test_industry_chain.py  test_message_sanitize.py  test_pattern_lib.py  test_performance_optimizations.py  test_phase1_week1.py  test_phase1_week2.py  test_phase1_week3.py  test_phase1_week4.py  test_scan_fixes.py  (+7 more)
(+137 files in other folders)
